# singular-demux

./: Cargo.toml  Contributing.md  LICENSE  README.md
.github/workflows/: build_and_test.yml  publish.yml
docs/: 01_Introduction.md  02_Installation.md  03_Usage.md  04_Contributing.md  05_DevOps.md
src/: main.rs
src/lib/: .run.rs.swp  .sample_metadata.rs.swp  demux.rs  fastq_header.rs  matcher.rs  metrics.rs  mod.rs  opts.rs  pooled_sample_writer.rs  run.rs  sample_metadata.rs  sample_sheet.rs  thread_reader.rs  utils.rs
