[package]
name = "sgdemux"
version = "1.2.0"
edition = "2021"
authors = ["Nils Homer <nils@fulcrumgenomics.com>", "Seth Stadick <seth@fulcrumgenomics.com>"]
license-file = "License"
description = "FASTQ Sample Demultiplexing for Singular Geonmics"
homepage = "https://github.com/Singular-Genomics/singular-demux"
documentation = "https://github.com/Singular-Genomics/singular-demux"
repository = "https://github.com/Singular-Genomics/singular-demux"
readme = "README.md"
categories = ["science"]
keywords = ["singular genomics", "bioinformatics", "fastq", "demultiplexing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
#debug = 2

[lib]
name = "sgdemux_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "sgdemux"
path = "src/main.rs"

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.45"
bgzf = "0.2.0"
bstr = "0.2.17"
bytecount = "0.6.2"
bytes = "1.1.0"
cached = "0.30.0"
clap = { version = "3.2.22", features = ["derive"] }
csv = "1.1.6"
env_logger = "0.9.0"
fgoxide = "0.1.3"
flume = "0.10.9"
gzp = "0.10.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.14"
mimalloc = { version = "0.1.27", default-features = false }
num_cpus = "1.13.0"
parking_lot = "0.11.2"
path-absolutize = "3.0.14"
pooled-writer = "0.2.0"
rayon = "1.5.1"
read-structure = "0.1.0"
regex = "1.7.0"
seq_io = { git = "https://github.com/fulcrumgenomics/seq_io.git", rev = "3d461a3" }
serde = { version = "1.0.130", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"

[build-dependencies]
built = { version = "0.5.1", features = ["git2"] }

[dev-dependencies]
matches = "0.1.9"
rstest = "0.12.0"
tempfile = "3.2.0"
